# crits

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  MIGRATION_PLAN.md  Makefile  PLAN_MCP_SERVER.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
crits/: settings.py  urls.py
crits/actors/: handlers.py
crits/backdoors/: handlers.py
crits/certificates/: handlers.py
crits/config/: config.py  forms.py
crits/core/: api.py  class_mapper.py  crits_mongoengine.py  data_tools.py  handlers.py  user.py  user_tools.py  views.py  widgets.py
crits/core/management/commands/: create_default_collections.py  create_locations.py  setconfig.py  test_install.py  upgrade.py  users.py
crits/core/templatetags/: filters.py
crits/dashboards/: handlers.py  utilities.py  views.py
crits/dashboards/templates/: save_search.html
crits/domains/: handlers.py
crits/emails/: handlers.py
crits/indicators/: handlers.py  indicator.py
crits/notifications/: processor.py
crits/raw_data/: handlers.py
crits/samples/: handlers.py  sample.py
crits/services/: __init__.py  analysis_records.py  core.py  handlers.py  results.py  runtime.py  runtime_settings.py  service_records.py  urls.py  views.py
crits/services/templates/: services_list.html
crits/signatures/: handlers.py
crits_api/: __init__.py  config.py  main.py
crits_api/auth/: __init__.py  context.py  ldap.py  permissions.py  redis_session.py  session.py  totp.py  user_state.py
crits_api/cache/: __init__.py  decorators.py  keys.py  redis_client.py
crits_api/db/: __init__.py  admin_access_records.py  admin_config_records.py  admin_user_records.py  analysis_records.py  api_settings.py  auth_records.py  connection.py  service_records.py  tlo_lookup.py  tlo_records.py  tlo_vocabulary.py
crits_api/graphql/: __init__.py  context.py  extensions.py  schema.py
crits_api/graphql/mutations/: __init__.py  actors.py  admin.py  auth.py  backdoors.py  bulk.py  campaigns.py  certificates.py  comments.py  conversations.py  domains.py  emails.py  events.py  exploits.py  indicators.py  ips.py  pcaps.py  raw_data.py  relationships.py  samples.py  screenshots.py  services.py  signatures.py  tags.py  targets.py
crits_api/graphql/queries/: __init__.py  actors.py  admin.py  analysis_results.py  backdoors.py  campaigns.py  certificates.py  comments.py  conversations.py  dashboard.py  domains.py  emails.py  events.py  exploits.py  indicators.py  ips.py  pcaps.py  raw_data.py  related_objects.py  relationships.py  samples.py  screenshots.py  search.py  services.py  signatures.py  sorting.py  tags.py  targets.py
crits_api/graphql/types/: __init__.py  actor.py  admin.py  backdoor.py  campaign.py  certificate.py  common.py  conversation.py  domain.py  email_type.py  event.py  exploit.py  indicator.py  ip.py  pagination.py  pcap.py  raw_data.py  sample.py  screenshot.py  signature.py  target.py  user.py
crits_api/models/: conversation.py
crits_api/routes/: chat.py  download.py
crits_api/tests/: conftest.py  test_admin_config_items.py  test_admin_roles.py  test_admin_sources.py  test_admin_users.py  test_api_bootstrap.py  test_auth_sessions.py  test_comments.py  test_service_manager_lazy.py  test_services.py  test_tlo_queries_raw.py  test_worker_bootstrap.py
crits_api/worker/: __init__.py  app.py  celeryconfig.py  health.py
crits_api/worker/services/: __init__.py  base.py  execution.py  registry.py  results.py
crits_api/worker/services/builtin/: __init__.py  filetype.py  hashes.py  metadata.py  peinfo.py  ssdeep_hash.py  strings.py  yara_scan.py
crits_api/worker/tasks/: __init__.py  analysis.py  base.py
crits_next/: README.md  docker-compose.yml
crits_next/backend/: Dockerfile  README.md  requirements.txt
crits_next/backend/app/: main.py  models.py
crits_next/frontend/: Dockerfile  README.md  index.html  package.json
crits_next/frontend/src/: Admin.jsx  AdminPanel.jsx  App.jsx  main.jsx
docker/: Dockerfile.api  Dockerfile.test  Dockerfile.ui  Dockerfile.web  Dockerfile.worker  docker-compose.test.yml  entrypoint.sh  nginx-entrypoint.sh  nginx-ui.conf  nginx.conf
documentation/: service_conversion_guide.md
scripts/: bootstrap_test_data.py  migrate_py2_to_py3.py  test_imports.py
ui/: .gitignore  .npmrc  ARCHITECTURE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: ActivityTimeline.tsx  AddTLODialog.tsx  BulkActionBar.tsx  ChatSettings.tsx  CommentsSection.tsx  EditableField.tsx  MiniTLOTable.tsx  RelationshipsCard.tsx  SampleHashCard.tsx  SampleServicesCard.tsx  SampleToolsCard.tsx
ui/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Spinner.tsx  Table.tsx  index.ts
ui/src/contexts/: AuthContext.tsx  ThemeContext.tsx
ui/src/hooks/: useAIChat.ts  useBulkActions.ts  useConversations.ts  useDashboardStats.ts  useGlobalSearch.ts  useTLOCreate.ts  useTLODetail.ts  useTLOList.ts
ui/src/lib/: chatSystemPrompt.ts  graphql.ts  tloConfig.ts  utils.ts
ui/src/pages/: ChatPage.tsx  ConfigItemsPage.tsx  DashboardPage.tsx  IndicatorDetailPage.tsx  IndicatorsPage.tsx  LoginPage.tsx  RolesPage.tsx  ServicesPage.tsx  SourcesPage.tsx  TLODetailPage.tsx  TLOListPage.tsx  TagDetailPage.tsx  TagsPage.tsx  UsersPage.tsx
ui/src/types/: index.ts
